--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,56 @@
   padding: 0;
   box-sizing: border-box;
 }
+.blue {
+  background-color: #0a22f4;
+}
+.white {
+  background-color: #ffffff;
+}
+.lightblue {
+  background-color: #425bff;
+}
+.container {
+  width: 1600px;
+  margin: auto;
+}
+.jumbotron {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+.home-container {
+  margin-top: 115px;
+}
+.slider {
+  display: flex;
+  justify-content: space-between;
+}
+.left-img {
+  max-width: 707px;
+  max-height: 597px;
+  width: 100%;
+  border-radius: 10px;
+}
+.right-img {
+  max-width: 948px;
+  max-height: 800px;
+  width: 100%;
+  border-radius: 10px;
+}
+.slider {
+  max-width: 707px;
+}
+.circles div {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+.arrows,
+.arrows a {
+  display: inline-block;
+}
+.arrows a {
+  text-decoration: none;
+}
