--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,35 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.container{
+  display: inline-block;
+  width: 463px;
+  height: 385px;
+  position: absolute;   
+  top: 258px;           
+  left: 1095px;
+  background: #fff;     
+  padding: 5px; 
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);     
+}
+section div h2 {
+  padding-bottom: 60px;
+}
+.surati{
+  display: inline-block;
+  width: 707px;
+  height: 707px;
+  margin-right: 138px;
+  border: 5px solid #0a22f4; 
+  border-radius: 15px;
+  object-fit: cover;
+  box-shadow: 
+  -20px 20px 30px rgba(10, 34, 244, 0.5),   
+  -40px 40px 60px rgba(255, 255, 255, 0.3);
+  border-top: #0a22f4;
+  border-right: #0a22f4;
+  margin-left: 240px;
+}
+
+
