--- a/css/style.css
+++ b/css/style.css
@@ -4,35 +4,41 @@
   box-sizing: border-box;
 }
 header {
+  padding-top: 45px;
+  align-items: center;
   background-color: #0a22f4;
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 30px;
 }
 header nav ul {
-  display: flex;
-  justify-content: space-between;
-  gap: 32px;
-  margin-top: 15px;
-  margin-right: 200px;
-}
-header ul {
+  display: inline-block;
   list-style: none;
+  align-items: end;
+}
+header li {
+  display: inline-block;
 }
 header a {
   text-decoration: none;
   color: antiquewhite;
+  padding-left: 0px;
+  padding-right: 20px;
+}
+header .container {
+  width: 1460px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
 }
 .logo {
   height: 55px;
   width: auto;
-  margin-left: 40px;
 }
 nav .kontaqti {
   background: white;
   color: black;
-  padding: 8px 16px;
-  border-radius: 10px;
+  padding: 18px 43px;
+  border-radius: 30px;
   font-weight: 700;
 }
 .blue {
@@ -45,40 +51,38 @@ nav .kontaqti {
   background-color: #425bff;
 }
 .container {
-  width: 1600px;
-  margin: auto;
+  max-width: 1460px;
+  width: 100%;
 }
 .jumbotron {
-  display: flex;
+  display: grid;
+  grid-template-columns: minmax(400px, 707px) minmax(600px, 948px);
   align-items: center;
   gap: 25px;
+  margin-left: auto;
+  padding-bottom: 61px;
 }
-.home-container {
+section.home-container {
   padding-top: 115px;
 }
-.slider {
-  display: flex;
-  justify-content: space-between;
-}
 .left-img {
-  max-width: 707px;
-  max-height: 597px;
   width: 100%;
   border-radius: 10px;
 }
 .right-img {
-  max-width: 948px;
-  max-height: 800px;
   width: 100%;
   border-radius: 10px;
 }
 .slider {
-  max-width: 707px;
+  margin-top: 41px;
+  display: flex;
+  justify-content: space-between;
 }
 .circles div {
+  margin-right: 15px;
   display: inline-block;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
 }
 .arrows,
