--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,22 @@
-*{
+@font-face {
+  font-family: "BPG Arial Caps";
+  src: url("../fonts/bpg-arial-caps-webfont.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/bpg-arial-caps-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/bpg-arial-caps-webfont.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/bpg-arial-caps-webfont.woff")
+      format("woff"),
+    /* Pretty Modern Browsers */ url("../fonts/bpg-arial-caps-webfont.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/bpg-arial-caps-webfont.svg#bpg_arial_capsregular")
+      format("svg"); /* Legacy iOS */
+}
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "BPG Arial Caps";
 }
 header {
   padding-top: 45px;
@@ -40,6 +55,9 @@ nav .kontaqti {
   padding: 18px 43px;
   border-radius: 30px;
   font-weight: 700;
+}
+h2 {
+  font-family: "ArchyEDT-Bold", sans-serif;
 }
 .blue {
   background-color: #0a22f4;
